[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Alien.tscn" type="PackedScene" id=2]
[ext_resource path="res://Material rescue/wallpaper.png" type="Texture" id=3]
[ext_resource path="res://Astronauta.tscn" type="PackedScene" id=4]
[ext_resource path="res://Combustível.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://Main.gd" type="Script" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 97.8834, 194.624 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 3.05176e-05 )
z_index = -1
texture = ExtResource( 3 )
centered = false

[node name="Alien" parent="." instance=ExtResource( 2 )]
position = Vector2( 480.13, 102.028 )

[node name="Astronauta" parent="." instance=ExtResource( 4 )]
position = Vector2( 351, 180 )

[node name="Combustível" parent="." instance=ExtResource( 5 )]
position = Vector2( 127.132, 241.435 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="geraalien" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="geraastronauta" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="geracombustivel" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="fase" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="reinicio" type="Timer" parent="."]
wait_time = 3.0
[connection signal="morreu" from="Player" to="." method="_on_Player_morreu"]
[connection signal="timeout" from="geraalien" to="." method="_on_geraalien_timeout"]
[connection signal="timeout" from="geraastronauta" to="." method="_on_geraastronauta_timeout"]
[connection signal="timeout" from="geracombustivel" to="." method="_on_geracombustivel_timeout"]
[connection signal="timeout" from="fase" to="." method="_on_fase_timeout"]
[connection signal="timeout" from="reinicio" to="." method="_on_reinicio_timeout"]
